[project]
name = "open-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "ollama>=0.5.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "azure-ai-inference==1.0.0b9",
    "azure-core==1.35.0",
    "dotenv>=0.9.9",
]
